--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <img src="https://images.unsplash.com/photo-1541643600914-78b084683601?w=400&h=500&fit=crop&crop=center&q=80"
                         alt="Frasco do perfume Essência de Suvacu em fundo neutro" class="foto-produto">
                     <figcaption class="badges-produto">
-                        <mark class="badge novo"><span>🆕</span> LANÇAMENTO</mark>
-                        <mark class="badge melhor-vendido"><span>🏆</span> Nº1 EM VENDAS</mark>
-                        <mark class="badge exclusivo"><span>💎</span> EDIÇÃO LIMITADA</mark>
+                        <mark class="badge novo"><span><span aria-hidden="true">🆕</span></span> LANÇAMENTO</mark>
+                        <mark class="badge melhor-vendido"><span><span aria-hidden="true">🏆</span></span> Nº1 EM VENDAS</mark>
+                        <mark class="badge exclusivo"><span><span aria-hidden="true">💎</span></span> EDIÇÃO LIMITADA</mark>
                     </figcaption>
                 </figure>
 
@@ -54,13 +54,13 @@
                         </p>
 
                         <ul class="premios-reconhecimentos">
-                            <li><span>🏆</span> Melhor Fragrância Feminina 2024</li>
-                            <li><span>🌟</span> Revista Vogue Beauty Awards</li>
+                            <li><span><span aria-hidden="true">🏆</span></span> Melhor Fragrância Feminina 2024</li>
+                            <li><span><span aria-hidden="true">🌟</span></span> Revista Vogue Beauty Awards</li>
                         </ul>
 
                         <aside class="disponibilidade">
-                            <p class="estoque-urgencia" role="alert"><span>⚡</span> Apenas 7 unidades restantes em estoque</p>
-                            <p class="frete-info"><span>🚚</span> Frete grátis para todo Brasil acima de R$ 200</p>
+                            <p class="estoque-urgencia" role="alert"><span><span aria-hidden="true">⚡</span></span> Apenas 7 unidades restantes em estoque</p>
+                            <p class="frete-info"><span><span aria-hidden="true">🚚</span></span> Frete grátis para todo Brasil acima de R$ 200</p>
                         </aside>
                     </section>
                 </div>
@@ -68,7 +68,7 @@
 
             <aside class="oferta-especial" aria-label="Oferta especial">
                 <p class="banner-oferta">
-                    <span>🔥</span> OFERTA ESPECIAL: 10% de desconto à vista no PIX
+                    <span><span aria-hidden="true">🔥</span></span> OFERTA ESPECIAL: 10% de desconto à vista no PIX
                     <strong class="tempo-limitado">Por tempo limitado!</strong>
                 </p>
             </aside>
@@ -85,7 +85,7 @@
 
                 <div class="grid-info">
                     <section class="card-info">
-                        <h3><span>🌸</span> Notas Olfativas</h3>
+                        <h3><span><span aria-hidden="true">🌸</span></span> Notas Olfativas</h3>
                         <ul>
                             <li><strong>Notas de Topo:</strong> Bergamota, Limão Siciliano, Pêra</li>
                             <li><strong>Notas de Coração:</strong> Jasmim, Rosa Damascena, Peônia</li>
@@ -94,18 +94,18 @@
                     </section>
 
                     <section class="card-info">
-                        <h3><span>📋</span> Especificações Técnicas</h3>
+                        <h3><span><span aria-hidden="true">📋</span></span> Especificações Técnicas</h3>
                         <ul>
                             <li>Concentração: Eau de Parfum 20%</li>
                             <li>Fixação: 8 a 12 horas</li>
-                            <li><span>🏆</span> Melhor Fragrância Feminina 2024</li>
-                            <li><span>📦</span> Embalagem premium</li>
+                            <li><span><span aria-hidden="true">🏆</span></span> Melhor Fragrância Feminina 2024</li>
+                            <li><span><span aria-hidden="true">📦</span></span> Embalagem premium</li>
                         </ul>
                     </section>
                 </div>
 
                 <section class="avaliacoes-destaque">
-                    <h3><span>⭐</span> O que dizem nossos clientes</h3>
+                    <h3><span><span aria-hidden="true">⭐</span></span> O que dizem nossos clientes</h3>
 
                     <article class="depoimento-cliente">
                         <img src="/img/nonno.tiff" alt="Foto de Marc Nonno, cliente de Turim, Itália"
@@ -129,7 +129,7 @@
         </section>
 
         <section id="secao-compra" class="secao-compra">
-            <h2 id="titulo-compra"><span>🛒</span> Fazer Pedido</h2>
+            <h2 id="titulo-compra"><span><span aria-hidden="true">🛒</span></span> Fazer Pedido</h2>
 
             <form novalidate aria-labelledby="titulo-compra">
 
@@ -166,7 +166,7 @@
                                         alt="Perfume Sifurrah Essência de Suvacu, frasco 75ml" class="mini-frasco">
                                     <figcaption>
                                         <strong>75ml – R$ 399,90</strong><br>
-                                        <span class="descricao-opcao"><span>🔥</span> MAIS POPULAR – Melhor custo-benefício</span>
+                                        <span class="descricao-opcao"><span><span><span aria-hidden="true">🔥</span></span> MAIS POPULAR – Melhor custo-benefício</span>
                                     </figcaption>
                                 </figure>
                             </label>
@@ -178,7 +178,7 @@
                                         alt="Perfume Sifurrah Essência de Suvacu, frasco 100ml" class="mini-frasco">
                                     <figcaption>
                                         <strong>100ml – R$ 499,90</strong><br>
-                                        <span class="descricao-opcao"><span>💰</span> MELHOR VALOR – Maior economia</span>
+                                        <span class="descricao-opcao"><span><span><span aria-hidden="true">💰</span></span> MELHOR VALOR – Maior economia</span>
                                     </figcaption>
                                 </figure>
                             </label>
@@ -197,26 +197,26 @@
                         <option value="4">4 perfumes</option>
                         <option value="5">5 perfumes</option>
                     </select>
-                    <p id="info-quantidade"><span>📦</span> Máximo 5 unidades por pedido</p>
+                    <p id="info-quantidade"><span aria-hidden="true">📦</span> Máximo 5 unidades por pedido</p>
                 </fieldset>
 
                 <!-- PASSO 3 -->
                 <fieldset class="passo-compra passo-3">
                     <legend>Passo 3: Seus dados para entrega</legend>
 
-                    <label for="nome">👤 Nome completo *</label>
+                    <label for="nome"><span aria-hidden="true">👤</span> Nome completo *</label>
                     <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo" autocomplete="name">
 
-                    <label for="cep">📍 CEP *</label>
+                    <label for="cep"><span aria-hidden="true">📍</span>CEP *</label>
                     <input type="text" id="cep" name="cep" placeholder="00000-000" required autocomplete="postal-code" maxlength="9">
 
-                    <label for="endereco">🏠 Endereço completo</label>
+                    <label for="endereco"><span aria-hidden="true">🏠</span>Endereço completo</label>
                     <input type="text" id="endereco" name="endereco" placeholder="Rua, número, bairro, cidade" autocomplete="street-address">
 
-                    <label for="telefone">📱 Telefone para contato</label>
+                    <label for="telefone"><span aria-hidden="true">📱</span>Telefone para contato</label>
                     <input type="tel" id="telefone" name="telefone" placeholder="(11) 99999-9999" autocomplete="tel">
 
-                    <label for="email">📧 E-mail</label>
+                    <label for="email"><span aria-hidden="true">📧</span>E-mail</label>
                     <input type="email" id="email" name="email" placeholder="seu@email.com" autocomplete="email">
                 </fieldset>
 
@@ -224,7 +224,7 @@
                 <fieldset class="passo-compra passo-4">
                     <legend>Passo 4: Confirmar pedido</legend>
 
-                    <h3 id="titulo-pagamento"><span>💳</span> Formas de pagamento</h3>
+                    <h3 id="titulo-pagamento"><span><span aria-hidden="true">💳</span></span> Formas de pagamento</h3>
                     <label><input type="radio" id="pagamento-cartao" name="pagamento" value="cartao"> Cartão de crédito</label>
                     <label><input type="radio" id="pagamento-pix" name="pagamento" value="pix" checked> PIX (10% desconto)</label>
                     <label><input type="radio" id="pagamento-boleto" name="pagamento" value="boleto"> Boleto bancário</label>
@@ -234,27 +234,27 @@
                     </button>
 
                     <ul class="garantias">
-                        <li>✓ Garantia de 30 dias</li>
-                        <li>🚚 Frete grátis acima de R$ 200</li>
-                        <li>⚡ Entrega em 3-5 dias úteis</li>
+                        <li><span aria-hidden="true">✓</span> Garantia de 30 dias</li>
+                        <li><span aria-hidden="true">🚚</span> Frete grátis acima de R$ 200</li>
+                        <li><span aria-hidden="true">⚡</span> Entrega em 3-5 dias úteis</li>
                     </ul>
                 </fieldset>
             </form>
         </section>
 
         <section id="mensagem-sucesso" class="oculto secao-sucesso" aria-live="polite">
-            <h2 id="titulo-sucesso">✅ Pedido Realizado com Sucesso!</h2>
-            <p><strong>🎉 Parabéns!</strong> Seu pedido foi confirmado.</p>
+            <h2 id="titulo-sucesso"><span aria-hidden="true">✅</span> Pedido Realizado com Sucesso!</h2>
+            <p><strong><span aria-hidden="true">🎉</span> Parabéns!</strong> Seu pedido foi confirmado.</p>
             <dl class="detalhes-pedido">
-                <dt>📋 Número do pedido:</dt>
+                <dt><span aria-hidden="true">📋</span> Número do pedido:</dt>
                 <dd id="numero-pedido">SIFU12345</dd>
-                <dt>💰 Total pago:</dt>
+                <dt><span aria-hidden="true">💰</span> Total pago:</dt>
                 <dd id="total-pago">R$ 269,91</dd>
-                <dt>🚚 Prazo de entrega:</dt>
+                <dt><span aria-hidden="true">🚚</span> Prazo de entrega:</dt>
                 <dd>3 a 5 dias úteis</dd>
             </dl>
-            <p><span>📧</span> Você receberá um e-mail com os detalhes do pedido e código de rastreamento.</p>
-            <button type="button" onclick="novaCompra()" class="botao-secundario">🔄 Fazer Nova Compra</button>
+            <p><span><span aria-hidden="true">📧</span></span> Você receberá um e-mail com os detalhes do pedido e código de rastreamento.</p>
+            <button type="button" onclick="novaCompra()" class="botao-secundario"><span aria-hidden="true">🔄</span> Fazer Nova Compra</button>
         </section>
     </main>
 
